--- a/index.htm
+++ b/index.htm
@@ -391,7 +391,7 @@
     var theme = 'pure_words';
     console.log('theme ->' + theme);
     var theme_content = {
-        "pure_words_content": "嘿，xx！生日快乐呀！\r你知道不，虽然最近是阴天，\r今天是你生日，\r得把太阳拉出来晒晒啦！\r我希望你能天天开心！\r你笑起来的时候真的超级好看超级美！",
+        "pure_words_content": "嘿，xx！生日快乐呀！\r今天是属于你的特别一天！\r祝你年年十八，钱包天天鼓，吃啥都不胖，睡觉到自然醒！🎂😂\r你可是朋友圈里颜值和才华的双顶流，\r今天的任务就是好好享受，吃蛋糕吃到扶墙走！🧁🍰\r祝你生日快乐，快乐到宇宙都羡慕！✨",
         "typed_bool": "typed_y",
         "cursor_char": "cursor_heart",
         "bg_style_pure_words": "bg_opacity",
