--- a/index.htm
+++ b/index.htm
@@ -391,7 +391,7 @@
     var theme = 'pure_words';
     console.log('theme ->' + theme);
     var theme_content = {
-        "pure_words_content": "嘿，贝贝！生日快乐呀！\r今天是属于你的特别一天！\r祝你年年十八，钱包天天鼓，睡觉到自然醒！\r你可是朋友圈里颜值和才华的双顶流，\r今天的任务就是好好享受，吃蛋糕吃到扶墙走！\r祝你生日快乐，快乐到宇宙都羡慕！✨",
+        "pure_words_content": "嘿！生日快乐呀！\r今天是属于我们的的特别一天！\r祝我们以后一定暴富！！\r颜值和朋友都狠狠涨！！\r今天的任务就是天天开心！\r今年的项目我也来定了,\r今年的任务就是今年都要开心！！\r我希望我们都会找到属于自己不后悔的路开心的走下去！o.O
         "typed_bool": "typed_y",
         "cursor_char": "cursor_heart",
         "bg_style_pure_words": "bg_opacity",
