--- a/index.htm
+++ b/index.htm
@@ -391,7 +391,7 @@
     var theme = 'pure_words';
     console.log('theme ->' + theme);
     var theme_content = {
-        "pure_words_content": "学姐，生日快乐呀！\r今天是属于你的特别一天！\r祝你天天开心！！\r能够过上自己喜欢的日子！，\r越来越美丽！！\r祝你生日快乐！！",
+        "pure_words_content": "生日快乐呀！\r今天是属于你的特别一天！\r祝你天天开心！！\r能够过上自己喜欢的日子！\r越来越美丽！！\r祝你生日快乐！！",
         "typed_bool": "typed_y",
         "cursor_char": "cursor_heart",
         "bg_style_pure_words": "bg_opacity",
