--- a/index.htm
+++ b/index.htm
@@ -135,7 +135,7 @@
             <div id="div_dbacke_access">
                 <h1>生日快乐！</h1>
                 <input id="input_award" type="text" autofocus="autofocus" placeholder="123" oninput="show_dbcake_btn()" maxlength="10">
-                <input id="input_award_btn" type="button" value="点这里打开惊喜" onclick="show_dbcake()">
+                <input id="input_award_btn" type="button" value="点这里打开下一页" onclick="show_dbcake()">
             </div>
 
             <div id="div_dbcake_cake">
