--- a/index.htm
+++ b/index.htm
@@ -391,7 +391,7 @@
     var theme = 'pure_words';
     console.log('theme ->' + theme);
     var theme_content = {
-        "pure_words_content": 我的好大儿，生日快乐！\r你也终于是长大了孩子\r长大了别忘了我啊！！\r小子记得天天开心点！\r别当闷葫芦虽然你嘴比谁都黑哈哈哈！！\r最后一句还是，祝你生日快乐！！",
+        "pure_words_content": 我的好大儿，生日快乐！,\r你也终于是长大了孩子,\r长大了别忘了我啊！！,\r小子记得天天开心点！\r别当闷葫芦虽然你嘴比谁都黑哈哈哈！！\r最后一句还是，祝你生日快乐！！",
         "typed_bool": "typed_y",
         "cursor_char": "cursor_heart",
         "bg_style_pure_words": "bg_opacity",
